Improve: many html: only https register service worker, ktv.html: single page navigation

--- a/share/2048.html
+++ b/share/2048.html
@@ -427,7 +427,7 @@
         crossorigin="anonymous"></script>
     <script>
 
-        if ("serviceWorker" in navigator)
+        if ("serviceWorker" in navigator && new URL(location.href).protocol === "https:")
             navigator.serviceWorker.register("service_worker.js")
 
         let autoPlay2048, autoPlay2048_2dir;
