--- a/share/tic_tac_toe.html
+++ b/share/tic_tac_toe.html
@@ -178,7 +178,7 @@ body {
     <script>
 (function() {
 
-if ("serviceWorker" in navigator)
+if ("serviceWorker" in navigator && new URL(location.href).protocol === "https:")
     navigator.serviceWorker.register("service_worker.js")
 
 function $(selectors, element=document) {
