--- a/share/boid.html
+++ b/share/boid.html
@@ -136,7 +136,7 @@ https://github.com/lufemas/boid-ai-implementation
 
 */
 
-if ("serviceWorker" in navigator)
+if ("serviceWorker" in navigator && new URL(location.href).protocol === "https:")
     navigator.serviceWorker.register("service_worker.js")
 
 function distance(a, b) {
