--- a/share/loop.html
+++ b/share/loop.html
@@ -176,7 +176,7 @@ body {
 
     <script>
 
-if ("serviceWorker" in navigator)
+if ("serviceWorker" in navigator && new URL(location.href).protocol === "https:")
     navigator.serviceWorker.register("service_worker.js")
 
 function $(selectors, element=document) {
