--- a/share/ppg.html
+++ b/share/ppg.html
@@ -46,7 +46,7 @@
 
 (function() {
 
-if ("serviceWorker" in navigator)
+if ("serviceWorker" in navigator && new URL(location.href).protocol === "https:")
     navigator.serviceWorker.register("service_worker.js")
 
 const fps = 60
