--- a/share/time_record.html
+++ b/share/time_record.html
@@ -61,7 +61,7 @@ body {
 
     <script>
 
-if ("serviceWorker" in navigator)
+if ("serviceWorker" in navigator && new URL(location.href).protocol === "https:")
     navigator.serviceWorker.register("service_worker.js")
 
 function $(selectors, element=document) {
